# RAG-Pipeline-with-Hybrid-Search-Over-Internal-Docs

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
.streamlit/: config.toml
sample_data/: Policy-Document.md
src/: config.py  main.py
src/evaluation/: metrics_runner.py
src/generation/: generator.py  verifier.py
src/indexing/: dense.py  hybrid_retriever.py  sparse.py
src/ingestion/: chunkers.py  deduplicator.py  parsers.py  schemas.py
src/reranking/: cross_encoder.py
src/ui/: app.py
tests/: test_api.py  test_ingestion.py  test_retrieval.py  test_verification.py
